Добавил сетку и компоненты для отрисовки

--- a/README.mb
+++ b/README.mb
@@ -3,8 +3,8 @@
 │   ├── core/                  # Ядро игры и базовые системы
 │   │   ├── game.py            # Главный игровой цикл (сущ.)
 │   │   ├── maze.py            # Генерация лабиринта (сущ.)
-│   │   ├── collision_system.py# Система коллизий (будет добавлено)
-│   │   ├── controller.py      # Обработка ввода (будет добавлено)
+│   │   ├── collision_system.py# Система коллизий (сущ.)
+│   │   ├── controller.py      # Обработка ввода (сущ.)
 │   │   └── game_state.py      # Управление состоянием игры (будет добавлено)
 │   │
 │   ├── game_objects/          # Все игровые объекты
@@ -24,7 +24,7 @@
 │   │   ├── camera.py          # Камера (сущ.)
 │   │   ├── ray.py             # Лучи видимости (сущ.)
 │   │   ├── seeing_object.py   # Объекты с "зрением" (сущ.)
-│   │   └── renderer.py        # Основной рендерер (будет добавлено)
+│   │   └── renderer.py        # Основной рендерер (сущ.)
 │   │
 │   ├── data/                  # Работа с данными
 │   │   ├── database_handler.py# SQLite взаимодействие (будет добавлено)
