Пока нерабочая нейросеть

--- a/README.mb
+++ b/README.mb
@@ -14,11 +14,17 @@
 │   │   ├── key.py             # Ключи (сущ.)
 │   │   ├── hole.py            # Дыры (сущ.)
 │   │   ├── gates.py           # Ворота/двери (сущ.)
-│   │   └── enemy.py           # Крот-ИИ (будет добавлено)
+│   │   └── enemy.py           # Крот-ИИ (cущ)
 │   │
-│   ├── ai/                    # Логика искусственного интеллекта
-│   │   ├── dqn_agent.py       # Реализация DQN (будет добавлено)
-│   │   └── pathfinding.py     # Алгоритмы поиска пути (будет добавлено)
+│   ├── ai/
+│   │   ├── models/
+│   │   │   └── dqn_model.py       # Класс нейросети
+│   │   ├── dqn/
+│   │   │   ├── replay_buffer.py   # Буфер опыта
+│   │   │   └── dqn_trainer.py     # Логика обучения
+│   │   └── utils/
+│   │       ├── config.py
+│   │       └── state_encoder.py   # Преобразование состояния игры в вектор
 │   │
 │   ├── rendering/             # Система отрисовки
 │   │   ├── camera.py          # Камера (сущ.)
